Change comments to be consistent across files
Rules that are followed in comments:
* Capitalize first word.
* Avoid comments following code on the same line.

Some comments were also added or improved as part of this commit.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,32 +1,32 @@
-# based on https://stackoverflow.com/a/40902312/1046584
+# Based on https://stackoverflow.com/a/40902312/1046584
 run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c 6-)"
 
 set -g default-terminal screen-256color
 setw -g monitor-activity on
 
-# make number swapping sequential
+# Make number swapping sequential.
 set -g base-index 1
 
-# remap prefix key to F12 (map F12 to Caps Lock in Windows)
+# Remap prefix key to F12 (map F12 to Caps Lock in Windows).
 unbind C-b
 set -g prefix F12
 
-# Scroll mode (enables C-u and C-d for half page scrolling)
+# Scroll mode (enables C-u and C-d for half page scrolling).
 setw -g mode-keys vi
 set -g status-keys vi
 
-# horizontal and vertical window splitting
+# Horizontal and vertical window splitting.
 bind a split-window -v
 bind A split-window -h
 
-# j for scrolling
+# j for scrolling.
 bind j copy-mode
 
-# Shift arrow to switch windows
+# Shift arrow to switch windows.
 bind -n S-Left  previous-window
 bind -n S-Right next-window
 
-# # copy and pasting shortcuts (needs 'xclip' to be installed)
+# Copy and pasting shortcuts (needs 'xclip' to be installed).
 # https://github.com/tmux/tmux/issues/754
 if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.4" | bc)" = 1 ]' \
    'bind -T copy-mode-vi v send-keys -X begin-selection ; \
@@ -34,29 +34,29 @@ if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.4" | bc)" = 1 ]' \
    'bind -t vi-copy v begin-selection ; \
     bind -t vi-copy y copy-pipe "xclip -sel clip -i" ; '
 
-# highlight current window
+# Highlight current window.
 bind R source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
-# increase scrollback
+# Increase scrollback.
 set-option -g history-limit 5000
 
 ## THEME
-# highlight current window
+# Highlight current window.
 set -g window-status-current-bg black
 set -g window-status-current-fg white
 set -g window-status-activity-bg black
 set -g window-status-activity-fg cyan
 
-# alignment settings
+# Alignment settings.
 set-option -g status-justify centre
 
-# window list options
+# Window list options.
 setw -g automatic-rename on
 # Current window index (just numbers)
 # set-window-option -g window-status-format '#I'
 # set-window-option -g window-status-current-format '#I'
 
-# status left and right options
+# Status left and right options.
 set -g status-left '#S'
 set-option -g status-left-length 15
 set -g status-right ''
