Add tmux bindings to join and break panes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -58,3 +58,9 @@ set -g status-left '#S'
 set-option -g status-left-length 15
 set -g status-right ''
 set-option -g status-right-length 0
+
+# Grab pane from target window and join to current window.
+bind y command-prompt -p "join pane from:"  "join-pane -s '%%'"
+
+# Break pane to separate window.
+bind u break-pane
