Use S in tmux to toggle synchronize-panes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -64,3 +64,8 @@ bind y command-prompt -p "join pane from:"  "join-pane -s '%%'"
 
 # Break pane to separate window.
 bind u break-pane
+
+# Toggle synchronize-panes, which sends CMDs to all panes.
+bind S \
+    set synchronize-panes \;\
+    display "Sync #{?synchronize-panes,ON,OFF}"
