Use current pane's path for new window/pane

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,9 +15,14 @@ set -g prefix F12
 setw -g mode-keys vi
 set -g status-keys vi
 
-# Horizontal and vertical window splitting.
-bind a split-window -v
-bind A split-window -h
+# Window creation and splitting. Use current pane path.
+if-shell -b '[ "$(echo "$TMUX_VERSION < 1.9" | bc)" = 1 ]' \
+	'bind a split-window -v ; \
+	 bind A split-window -h ; '
+if-shell -b '[ "$(echo "$TMUX_VERSION >= 1.9" | bc)" = 1 ]' \
+	'bind a split-window -c "#{pane_current_path}" ; \
+	 bind A split-window -h -c "#{pane_current_path}" ; \
+	 bind c new-window -c "#{pane_current_path}" ; ' \
 
 # j for scrolling.
 bind j copy-mode
