--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,12 +32,16 @@ bind -n S-Left  previous-window
 bind -n S-Right next-window
 
 # Copy and pasting shortcuts (needs 'xclip' to be installed).
-# https://github.com/tmux/tmux/issues/754
+if-shell -b '[ "$(echo "$TMUX_VERSION < 2.4" | bc)" = 1 ]' \
+	'bind-key -t vi-copy v   begin-selection; \
+	 bind-key -t vi-copy V   select-line; \
+	 bind-key -t vi-copy C-v rectangle-toggle; \
+	 bind-key -t vi-copy y   copy-pipe "xclip -selection clipboard -in"'
 if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.4" | bc)" = 1 ]' \
-	'bind -T copy-mode-vi v send-keys -X begin-selection ; \
-	 bind -T copy-mode-vi y send-keys -X copy-pipe "xclip -sel clip -i" ; ' \
-	'bind -t vi-copy v begin-selection ; \
-	 bind -t vi-copy y copy-pipe "xclip -sel clip -i" ; '
+	'bind-key -T copy-mode-vi v   send -X begin-selection; \
+	 bind-key -T copy-mode-vi V   send -X select-line; \
+	 bind-key -T copy-mode-vi C-v send -X rectangle-toggle; \
+	 bind-key -T copy-mode-vi y   send -X copy-pipe-and-cancel "xclip -selection clipboard -in"'
 
 # Highlight current window.
 bind R source-file ~/.tmux.conf \; display-message "Config reloaded..."
