Display hint when the tmux prefix key is pressed
Reverse the colour of the left section of the status bar in tmux when
the prefix key has been pressed.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -59,8 +59,9 @@ set-option -g status-justify centre
 setw -g automatic-rename on
 
 # Status left and right options.
-set -g status-left '#S'
-set-option -g status-left-length 15
+## Notify when prefix key has been pressed.
+set -g status-left '#{?client_prefix,#[reverse] #S #[noreverse], #S }'
+set-option -g status-left-length 20
 set -g status-right ''
 set-option -g status-right-length 0
 
