--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,15 +29,15 @@ bind j copy-mode
 
 # Copy and pasting shortcuts (needs 'xclip' to be installed).
 if-shell -b '[ "$(echo "$TMUX_VERSION < 2.4" | bc)" = 1 ]' \
-	'bind-key -t vi-copy v   begin-selection; \
-	 bind-key -t vi-copy V   select-line; \
-	 bind-key -t vi-copy C-v rectangle-toggle; \
-	 bind-key -t vi-copy y   copy-pipe "xclip -selection clipboard -in"'
+	'bind -t vi-copy v   begin-selection; \
+	 bind -t vi-copy V   select-line; \
+	 bind -t vi-copy C-v rectangle-toggle; \
+	 bind -t vi-copy y   copy-pipe "xclip -selection clipboard -in"'
 if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.4" | bc)" = 1 ]' \
-	'bind-key -T copy-mode-vi v   send -X begin-selection; \
-	 bind-key -T copy-mode-vi V   send -X select-line; \
-	 bind-key -T copy-mode-vi C-v send -X rectangle-toggle; \
-	 bind-key -T copy-mode-vi y   send -X copy-pipe-and-cancel "xclip -selection clipboard -in"'
+	'bind -T copy-mode-vi v   send -X begin-selection; \
+	 bind -T copy-mode-vi V   send -X select-line; \
+	 bind -T copy-mode-vi C-v send -X rectangle-toggle; \
+	 bind -T copy-mode-vi y   send -X copy-pipe-and-cancel "xclip -selection clipboard -in"'
 
 # Highlight current window.
 bind R source-file ~/.tmux.conf \; display-message "Config reloaded..."
