Add tmux binding to maximize current pane

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,6 +24,9 @@ if-shell -b '[ "$(echo "$TMUX_VERSION >= 1.9" | bc)" = 1 ]' \
 	 bind A split-window -h -c "#{pane_current_path}" ; \
 	 bind c new-window -c "#{pane_current_path}" ; ' \
 
+# Double tap prefix key to maximize current pane.
+bind F12 resize-pane -Z
+
 # j for scrolling.
 bind j copy-mode
 
