Improve TMUX_VERSION retrieval
Sometimes, "tmux -V" can return "2.9a" or something similar. Cut off the
letter as this confuses version checks later.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 # Based on https://stackoverflow.com/a/40902312/1046584
-run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c 6-)"
+run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c 6-8)"
 
 set -g default-terminal screen-256color
 setw -g monitor-activity on
