--- a/.tmux.conf
+++ b/.tmux.conf
@@ -50,10 +50,8 @@ set-option -g history-limit 10000
 
 ## THEME
 # Highlight current window.
-set -g window-status-current-bg black
-set -g window-status-current-fg white
-set -g window-status-activity-bg black
-set -g window-status-activity-fg cyan
+set -g window-status-current-style bg=black,fg=white
+set -g window-status-activity-style bg=cyan,fg=black
 
 # Alignment settings.
 set-option -g status-justify centre
