Make swapping windows in tmux using numbers sane
Does this by:
* Set pane numbering in line with base window numbering.
* Automatically renumber windows in sequential order when a window is
  closed.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,8 +4,10 @@ run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c 6-8)"
 set -g default-terminal screen-256color
 setw -g monitor-activity on
 
-# Make number swapping sequential.
+# Make swapping windows in tmux using numbers sane.
 set -g base-index 1
+setw -g pane-base-index 1
+set -g renumber-windows on
 
 # Remap prefix key to F12 (map F12 to Caps Lock in Windows).
 unbind C-b
