Remove unnecessary backslash

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,7 +24,7 @@ if-shell -b '[ "$(echo "$TMUX_VERSION < 1.9" | bc)" = 1 ]' \
 if-shell -b '[ "$(echo "$TMUX_VERSION >= 1.9" | bc)" = 1 ]' \
 	'bind a split-window -c "#{pane_current_path}" ; \
 	 bind A split-window -h -c "#{pane_current_path}" ; \
-	 bind c new-window -c "#{pane_current_path}" ; ' \
+	 bind c new-window -c "#{pane_current_path}" ; '
 
 # Double tap prefix key to maximize current pane.
 bind F12 resize-pane -Z
