Support multiple versions of tmux theme settings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -52,8 +52,14 @@ set-option -g history-limit 10000
 
 ## THEME
 # Highlight current window.
-set -g window-status-current-style bg=black,fg=white
-set -g window-status-activity-style bg=cyan,fg=black
+if-shell -b '[ "$(echo "$TMUX_VERSION < 2.6" | bc)" = 1 ]' \
+	'set -g window-status-current-bg black; \
+	 set -g window-status-current-fg white; \
+	 set -g window-status-activity-bg black; \
+	 set -g window-status-activity-fg cyan; '
+if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.6" | bc)" = 1 ]' \
+	'set -g window-status-current-style bg=black,fg=white; \
+	 set -g window-status-activity-style bg=cyan,fg=black; '
 
 # Alignment settings.
 set-option -g status-justify centre
