--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,6 @@
 run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c 6-8)"
 
 set -g default-terminal screen-256color
-setw -g monitor-activity on
 
 # Make swapping windows in tmux using numbers sane.
 set -g base-index 1
@@ -54,12 +53,9 @@ set-option -g history-limit 10000
 # Highlight current window.
 if-shell -b '[ "$(echo "$TMUX_VERSION < 2.6" | bc)" = 1 ]' \
 	'set -g window-status-current-bg black; \
-	 set -g window-status-current-fg white; \
-	 set -g window-status-activity-bg black; \
-	 set -g window-status-activity-fg cyan; '
+	 set -g window-status-current-fg white; '
 if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.6" | bc)" = 1 ]' \
-	'set -g window-status-current-style bg=black,fg=white; \
-	 set -g window-status-activity-style bg=cyan,fg=black; '
+	'set -g window-status-current-style bg=black,fg=white; '
 
 # Alignment settings.
 set-option -g status-justify centre
