Set window names to current directory name in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -60,8 +60,10 @@ if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.6" | bc)" = 1 ]' \
 # Alignment settings.
 set-option -g status-justify centre
 
-# Window list options.
-setw -g automatic-rename on
+# Set window name to current directory name.
+set-option -g status-interval 1
+set-option -g automatic-rename on
+set-option -g automatic-rename-format '#{b:pane_current_path}'
 
 # Status left and right options.
 ## Notify when prefix key has been pressed.
