Move most Git aliases to .gitconfig

--- a/.gitconfig
+++ b/.gitconfig
@@ -25,6 +25,9 @@
 	ff = only
 [alias]
 	cb = checkout -b
+	fa = fetch --all
 	; '@{u}' is a shortcut for the upstream branch (origin/<current_branch>).
 	overwrite-local = reset --hard '@{u}'
 	ol = overwrite-local
+	cr = commit --reuse-message=ORIG_HEAD
+	rcn = ! GIT_EDITOR=true git rebase --continue
