Add a git push alias
For use when pushing a branch for the first time.

--- a/.gitconfig
+++ b/.gitconfig
@@ -36,5 +36,6 @@
 	cas = commit --amend --no-edit -s
 	rcn = ! GIT_EDITOR=true git rebase --continue
 	pf = push --force-with-lease
+	pc = ! git push --set-upstream origin $(git symbolic-ref --short HEAD)
 	bu = ! git branch --set-upstream-to origin/$(git symbolic-ref --short HEAD)
 	fixline = log -1 --abbrev=12 --format='Fixes: %h (\"%s\")%nCc: %ae'
