Enable better color support
This requires changes to PuTTY settings which then get picked up by
KiTTY. It also requires changes to tmux settings.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,9 @@
 # Based on https://stackoverflow.com/a/40902312/1046584
 run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c 6-8)"
 
-set -g default-terminal screen-256color
+# Enable better color support.
+set -g default-terminal xterm-256color
+set-option -sa terminal-overrides ",xterm*:Tc"
 
 # Make swapping windows in tmux using numbers sane.
 set -g base-index 1
