Improve tmux sychronize-panes toggle comment

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -80,7 +80,7 @@ bind y command-prompt -p "join pane from:"  "join-pane -s '%%'"
 # Break pane to separate window.
 bind u break-pane
 
-# Toggle synchronize-panes, which sends CMDs to all panes.
+# Toggle synchronize-panes, which sends CMDs to all panes in a window.
 bind S \
 	set synchronize-panes \;\
 	display "Sync #{?synchronize-panes,ON,OFF}"
