Add tmux bindings to change pane layout for a window

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -84,3 +84,7 @@ bind u break-pane
 bind S \
 	set synchronize-panes \;\
 	display "Sync #{?synchronize-panes,ON,OFF}"
+
+# Set layout of current window's panes to horizontal/vertical.
+bind h select-layout even-horizontal
+bind v select-layout even-vertical
