Improve some comments in .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -51,7 +51,6 @@ bind R source-file ~/.tmux.conf \; display-message "Config reloaded..."
 # Increase scrollback.
 set-option -g history-limit 10000
 
-## THEME
 # Highlight current window.
 if-shell -b '[ "$(echo "$TMUX_VERSION < 2.6" | bc)" = 1 ]' \
 	'set -g window-status-current-bg black; \
@@ -67,10 +66,10 @@ set-option -g status-interval 1
 set-option -g automatic-rename on
 set-option -g automatic-rename-format '#{b:pane_current_path}'
 
-# Status left and right options.
-## Notify when prefix key has been pressed.
+# Indicate in left side of the status line when prefix key has been pressed.
 set -g status-left '#{?client_prefix,#[reverse] #S #[noreverse], #S }'
 set-option -g status-left-length 20
+# Show nothing in the right side of the status bar.
 set -g status-right ''
 set-option -g status-right-length 0
 
