--- a/.gitconfig
+++ b/.gitconfig
@@ -24,6 +24,9 @@
 	ff = only
 [checkout]
 	defaultRemote = origin
+[pw]
+	server = https://patchwork.ozlabs.org/api/1.2
+	project = openvswitch
 [alias]
 	alias = ! git config --get-regexp ^alias\\. | sed -e s/^alias\\.// -e s/\\ /\\ =\\ /
 	cb = checkout -b
