Reverse the diff order on Git dr and rdr aliases again
There are usecases where both diff orders make sense. The diff order
before this commit makes sense when looking at the changes that have
happened to the remote branch since the last pull. The diff order after
this commit makes sense when looking at the changes that have been made
in the local branch since the last pull.

--- a/.gitconfig
+++ b/.gitconfig
@@ -35,8 +35,8 @@
 	; '@{u}' is a shortcut for the upstream branch (origin/<current_branch>).
 	overwrite-local = reset --hard '@{u}'
 	ol = overwrite-local
-	dr = diff -R '@{u}'
-	rdr = range-diff ...'@{u}'
+	dr = diff '@{u}'
+	rdr = range-diff '@{u}'...
 	cr = commit --reuse-message=ORIG_HEAD
 	ca = commit --amend
 	can = commit --amend --no-edit
