--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,32 @@ tags
 [._]s[a-rt-v][a-z]
 [._]ss[a-gi-z]
 [._]sw[a-p]
+
+# C++ files.
+## Prerequisites.
+*.d
+## Compiled Object files.
+*.Plo
+*.slo
+*.lo
+*.o
+*.obj
+## Precompiled Headers.
+*.gch
+*.pch
+## Compiled Dynamic libraries.
+*.so
+*.dylib
+*.dll
+## Fortran module files.
+*.mod
+*.smod
+## Compiled Static libraries.
+*.lai
+*.la
+*.a
+*.lib
+## Executables.
+*.exe
+*.out
+*.app
