Remove TMUX_VERSION and old settings
This version checking code was causing an "server exited unexpectedly"
error when launching a tmux session where there are no existing
sessions. For tmux 2.6 (released in 2017) and newer, there should be no
change in functionality.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,3 @@
-# Based on https://stackoverflow.com/a/40902312/1046584
-run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c 6-8)"
-
 # Enable better color support.
 set -g default-terminal xterm-256color
 set-option -sa terminal-overrides ",xterm*:Tc"
@@ -19,13 +16,9 @@ setw -g mode-keys vi
 set -g status-keys vi
 
 # Window creation and splitting. Use current pane path.
-if-shell -b '[ "$(echo "$TMUX_VERSION < 1.9" | bc)" = 1 ]' \
-	'bind a split-window -v ; \
-	 bind A split-window -h ; '
-if-shell -b '[ "$(echo "$TMUX_VERSION >= 1.9" | bc)" = 1 ]' \
-	'bind a split-window -c "#{pane_current_path}" ; \
-	 bind A split-window -h -c "#{pane_current_path}" ; \
-	 bind c new-window -c "#{pane_current_path}" ; '
+bind a split-window -c "#{pane_current_path}"
+bind A split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
 # Double tap prefix key to maximize current pane.
 bind F12 resize-pane -Z
@@ -34,16 +27,10 @@ bind F12 resize-pane -Z
 bind j copy-mode
 
 # Copy and pasting shortcuts (needs 'xclip' to be installed).
-if-shell -b '[ "$(echo "$TMUX_VERSION < 2.4" | bc)" = 1 ]' \
-	'bind -t vi-copy v   begin-selection; \
-	 bind -t vi-copy V   select-line; \
-	 bind -t vi-copy C-v rectangle-toggle; \
-	 bind -t vi-copy y   copy-pipe "xclip -selection clipboard -in"'
-if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.4" | bc)" = 1 ]' \
-	'bind -T copy-mode-vi v   send -X begin-selection; \
-	 bind -T copy-mode-vi V   send -X select-line; \
-	 bind -T copy-mode-vi C-v send -X rectangle-toggle; \
-	 bind -T copy-mode-vi y   send -X copy-pipe-and-cancel "xclip -selection clipboard -in"'
+bind -T copy-mode-vi v   send -X begin-selection
+bind -T copy-mode-vi V   send -X select-line
+bind -T copy-mode-vi C-v send -X rectangle-toggle
+bind -T copy-mode-vi y   send -X copy-pipe-and-cancel "xclip -selection clipboard -in"
 
 # Highlight current window.
 bind R source-file ~/.tmux.conf \; display-message "Config reloaded..."
@@ -52,11 +39,7 @@ bind R source-file ~/.tmux.conf \; display-message "Config reloaded..."
 set-option -g history-limit 10000
 
 # Highlight current window.
-if-shell -b '[ "$(echo "$TMUX_VERSION < 2.6" | bc)" = 1 ]' \
-	'set -g window-status-current-bg black; \
-	 set -g window-status-current-fg white; '
-if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.6" | bc)" = 1 ]' \
-	'set -g window-status-current-style bg=black,fg=white; '
+set -g window-status-current-style bg=black,fg=white
 
 # Alignment settings.
 set-option -g status-justify centre
