Swap the tmux split-window shortcuts

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,8 +16,8 @@ setw -g mode-keys vi
 set -g status-keys vi
 
 # Window creation and splitting. Use current pane path.
-bind a split-window -c "#{pane_current_path}"
-bind A split-window -h -c "#{pane_current_path}"
+bind a split-window -h -c "#{pane_current_path}"
+bind A split-window -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
 # Double tap prefix key to maximize current pane.
