--- a/.gitconfig
+++ b/.gitconfig
@@ -49,3 +49,4 @@
 	pc = ! git push --set-upstream origin $(git symbolic-ref --short HEAD)
 	bu = ! git branch --set-upstream-to origin/$(git symbolic-ref --short HEAD)
 	fixline = log -1 --abbrev=12 --format='Fixes: %h (\"%s\")%nCc: %ae'
+	sum = show --no-patch --oneline
