--- a/.gitconfig
+++ b/.gitconfig
@@ -50,4 +50,5 @@
 	bu = ! git branch --set-upstream-to origin/$(git symbolic-ref --short HEAD)
 	fixline = log -1 --abbrev=12 --format='Fixes: %h (\"%s\")%nCc: %ae'
 	sum = show --no-patch --oneline
+	so = remote show origin
 	pro = remote prune origin
