--- a/.tigrc
+++ b/.tigrc
@@ -18,3 +18,6 @@ set file-filter = no
 
 # Use P in the main view to checkout the selected commit.
 bind generic P ?git checkout %(commit)
+
+# Use D in the status view to delete the selected file.
+bind status D !@?rm %(file)
