Add a tmux binding to re-run the last command

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -70,3 +70,6 @@ bind S \
 # Set layout of current window's panes to horizontal/vertical.
 bind h select-layout even-horizontal
 bind v select-layout even-vertical
+
+# Re-run the last command in the next tmux pane.
+bind k send-keys -t + "!!" C-m
