Add Tmux Plugin Manager

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -73,3 +73,11 @@ bind v select-layout even-vertical
 
 # Re-run the last command in the next tmux pane.
 bind k send-keys -t + "!!" C-m
+
+# List of tpm plugins.
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+# Initialize Tmux Plugin Manager. Keep this line at the bottom of tmux.conf.
+run '~/.tmux/plugins/tpm/tpm'
