Fix comment about tmux window numbering

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,7 @@
 set -g default-terminal xterm-256color
 set-option -sa terminal-overrides ",xterm*:Tc"
 
-# Make swapping windows in tmux using numbers sane.
+# Make it easier to jump to specific windows.
 set -g base-index 1
 setw -g pane-base-index 1
 set -g renumber-windows on
