Install Neovim and add its settings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,9 @@
 # Enable better color support.
-set -g default-terminal xterm-256color
-set-option -sa terminal-overrides ",xterm*:Tc"
+set-option -g default-terminal "tmux-256color"
+set-option -a terminal-features 'xterm-256color:RGB'
+
+# LazyVim recommends turning this on.
+set-option -g focus-events on
 
 # Make it easier to jump to specific windows.
 set -g base-index 1
