Improve tmux comment about color support
Explain why the "tmux-256color" and "xterm-256color" values do not
match.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,6 @@
-# Enable better color support.
+# Enable true color support.
 set-option -g default-terminal "tmux-256color"
+## Support RGB color by setting to value of $TERM outside of tmux.
 set-option -a terminal-features 'xterm-256color:RGB'
 
 # LazyVim recommends turning this on.
