Improve tmux.conf comments
Be consistent about use of imperative mood.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,7 @@ set-option -g default-terminal "tmux-256color"
 ## Support RGB color by setting to value of $TERM outside of tmux.
 set-option -a terminal-features 'xterm-256color:RGB'
 
-# LazyVim recommends turning this on.
+# Enable focus-events to let LazyVim know when a terminal window is in focus.
 set-option -g focus-events on
 
 # Make it easier to jump to specific windows.
@@ -15,22 +15,22 @@ set -g renumber-windows on
 unbind C-b
 set -g prefix F12
 
-# Scroll mode (enables C-u and C-d for half page scrolling).
+# Enable vi key bindings in copy mode.
 setw -g mode-keys vi
 set -g status-keys vi
 
-# Window creation and splitting. Use current pane path.
+# Use current pane path when creating and splitting windows.
 bind a split-window -h -c "#{pane_current_path}"
 bind A split-window -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
-# Double tap prefix key to maximize current pane.
+# Enable prefix key double tap to maximize current pane.
 bind F12 resize-pane -Z
 
-# j for scrolling.
+# Use J to enter copy mode.
 bind j copy-mode
 
-# Highlight current window.
+# Usr R to reload tmux configuration.
 bind R source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 # Increase scrollback.
@@ -39,7 +39,7 @@ set-option -g history-limit 10000
 # Highlight current window.
 set -g window-status-current-style bg=black,fg=white
 
-# Alignment settings.
+# Align the window list to the center.
 set-option -g status-justify centre
 
 # Set window name to current directory name.
