Fix typo in tmux.conf comment

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,7 +30,7 @@ bind F12 resize-pane -Z
 # Use J to enter copy mode.
 bind j copy-mode
 
-# Usr R to reload tmux configuration.
+# Use R to reload tmux configuration.
 bind R source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 # Increase scrollback.
