--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,8 +16,9 @@ unbind C-b
 set -g prefix F12
 
 # Enable vi key bindings in copy mode.
-setw -g mode-keys vi
-set -g status-keys vi
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle \; send -X begin-selection
 
 # Use current pane path when creating and splitting windows.
 bind a split-window -h -c "#{pane_current_path}"
