Set some Vim-like key bindings in interactive-rebase-tool

--- a/.gitconfig
+++ b/.gitconfig
@@ -56,5 +56,10 @@
 	subup = submodule update --init
 [sequence]
 	editor = interactive-rebase-tool
+[interactive-rebase-tool]
+	inputMoveUp = k
+	inputMoveDown = j
+	inputMoveSelectionUp = Control+k
+	inputMoveSelectionDown = Control+j
 [interactive]
 	difffilter = /usr/local/bin/diff-highlight
