--- a/.tmux.conf
+++ b/.tmux.conf
@@ -77,6 +77,7 @@ bind k send-keys -t + "!!" C-m
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'Morantron/tmux-fingers'
 
 # Initialize Tmux Plugin Manager. Keep this line at the bottom of tmux.conf.
 run '~/.tmux/plugins/tpm/tpm'
