--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,8 +45,6 @@ set-option -g status-justify centre
 
 # Set window name to current directory name.
 set-option -g status-interval 1
-set-option -g automatic-rename on
-set-option -g automatic-rename-format '#{b:pane_current_path}'
 
 # Indicate in left side of the status line when prefix key has been pressed.
 set -g status-left '#{?client_prefix,#[reverse] #S #[noreverse], #S }'
@@ -78,6 +76,10 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'Morantron/tmux-fingers'
+set -g @plugin 'ofirgall/tmux-window-name'
+
+# Use '~' as window name when in $HOME directory.
+set -g @tmux_window_name_use_tilde "True"
 
 # Initialize Tmux Plugin Manager. Keep this line at the bottom of tmux.conf.
 run '~/.tmux/plugins/tpm/tpm'
