--- a/.tmux.conf
+++ b/.tmux.conf
@@ -54,10 +54,10 @@ set -g status-right ''
 set-option -g status-right-length 0
 
 # Grab pane from target window and join to current window.
-bind y command-prompt -p "join pane from:"  "join-pane -s '%%'"
+bind -N "Join pane" k choose-window 'join-pane -h -s "%%"'
 
 # Break pane to separate window.
-bind u break-pane
+bind K break-pane
 
 # Toggle synchronize-panes, which sends CMDs to all panes in a window.
 bind S \
