--- a/.tmux.conf
+++ b/.tmux.conf
@@ -68,6 +68,8 @@ bind S \
 bind h select-layout even-horizontal
 bind v select-layout even-vertical
 
+# Rotate the pane positions within a window.
+bind-key O rotate-window
 
 # List of tpm plugins.
 set -g @plugin 'tmux-plugins/tpm'
