--- a/.tmux.conf
+++ b/.tmux.conf
@@ -77,9 +77,13 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'Morantron/tmux-fingers'
 set -g @plugin 'ofirgall/tmux-window-name'
+set -g @plugin 'sainnhe/tmux-fzf'
 
 # Use '~' as window name when in $HOME directory.
 set -g @tmux_window_name_use_tilde "True"
+
+# Use 'C-f' instead of the default 'F' which is used by tmux-fingers.
+TMUX_FZF_LAUNCH_KEY="C-f"
 
 # Initialize Tmux Plugin Manager. Keep this line at the bottom of tmux.conf.
 run '~/.tmux/plugins/tpm/tpm'
