Standardize tmux.conf bind-key to bind

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,8 +14,8 @@ set -g prefix F12
 
 # Enable vi key bindings in copy mode.
 set-window-option -g mode-keys vi
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle \; send -X begin-selection
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi C-v send-keys -X rectangle-toggle \; send -X begin-selection
 
 # Use current pane path when creating and splitting windows.
 bind a split-window -h -c "#{pane_current_path}"
@@ -57,7 +57,7 @@ bind h select-layout even-horizontal
 bind v select-layout even-vertical
 
 # Rotate the pane positions within a window.
-bind-key O rotate-window
+bind O rotate-window
 
 # List of tpm plugins.
 set -g @plugin 'tmux-plugins/tpm'
