--- a/.tmux.conf
+++ b/.tmux.conf
@@ -66,6 +66,8 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'Morantron/tmux-fingers'
 set -g @plugin 'ofirgall/tmux-window-name'
 set -g @plugin 'sainnhe/tmux-fzf'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum' # Place last in the plugins list.
 
 # Use '~' as window name when in $HOME directory.
 set -g @tmux_window_name_use_tilde "True"
